[gd_scene load_steps=26 format=2]

[ext_resource path="res://src/Actors/Modules/Enemy/DamageOnTouch.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Enemies/EnemyIdle.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/Bosses/BossIntro.gd" type="Script" id=3]
[ext_resource path="res://src/Actors/Bosses/AvalancheYeti/yeti.res" type="SpriteFrames" id=7]
[ext_resource path="res://src/Effects/Remains Particle.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Effects/Smoke Particles.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Effects/Explosion Particles.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Actors/Bosses/BossAI.gd" type="Script" id=11]
[ext_resource path="res://src/Actors/Modules/Enemy/BossDeath.gd" type="Script" id=12]
[ext_resource path="res://src/Actors/Modules/Enemy/BossDamage.gd" type="Script" id=13]
[ext_resource path="res://src/Actors/Panda.gd" type="Script" id=21]
[ext_resource path="res://src/Effects/Textures/blue_screen.png" type="Texture" id=23]
[ext_resource path="res://src/Effects/Textures/blue_explosion.png" type="Texture" id=24]
[ext_resource path="res://src/Sounds/HIT_BOSS.wav" type="AudioStream" id=25]
[ext_resource path="res://src/Effects/Materials/default_material.tres" type="Material" id=27]
[ext_resource path="res://src/Sounds/BOSS_DEATH.wav" type="AudioStream" id=28]
[ext_resource path="res://src/Actors/Bosses/boss_death_material.tres" type="Material" id=30]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.5, 30 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 26.25 )

[sub_resource type="Curve" id=10]
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, -6.06097, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=45]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=14]
resource_local_to_scene = true
emission_shape = 1
emission_sphere_radius = 43.04
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 7.69
anim_speed = 1.0
anim_speed_curve = SubResource( 45 )

[sub_resource type="Curve" id=42]
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, -6.06097, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=46]
curve = SubResource( 42 )

[sub_resource type="ParticlesMaterial" id=44]
resource_local_to_scene = true
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 7.69
anim_speed = 1.0
anim_speed_curve = SubResource( 46 )

[node name="BossName" type="KinematicBody2D" groups=["Bosses"]]
z_index = 4
collision_layer = 0
script = ExtResource( 21 )
max_health = 160.0

[node name="BossAI" type="Node2D" parent="."]
script = ExtResource( 11 )
debug_logs = true

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 17 )
shape = SubResource( 1 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 27 )
frames = ExtResource( 7 )
animation = "icestorm_loop"
frame = 1
playing = true
flip_h = true

[node name="area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( 0, 21.25 )
shape = SubResource( 2 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -6.5, 3.5 )
scale = Vector2( 4.35, 4.25 )

[node name="BossIntro" type="Node2D" parent="."]
script = ExtResource( 3 )
actions = [ "Event" ]
animation = "idle"

[node name="Idle" type="Node2D" parent="."]
script = ExtResource( 2 )
conflicting_moves = [ "Anything" ]
animation = "idle"

[node name="BossDeath" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 12 )

[node name="Explosion Particles" parent="BossDeath" instance=ExtResource( 10 )]
z_index = 12
amount = 20
process_material = SubResource( 14 )
texture = ExtResource( 24 )

[node name="Smoke Particles" parent="BossDeath" instance=ExtResource( 9 )]
z_index = 6
emitting = false

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="BossDeath"]
stream = ExtResource( 28 )
volume_db = -0.009
max_distance = 900.0
bus = "SFX"

[node name="background_light" type="Sprite" parent="BossDeath"]
material = ExtResource( 30 )
position = Vector2( 5.99998, 7.49999 )
scale = Vector2( 100, 40 )
z_index = -1
texture = ExtResource( 23 )

[node name="Remains" parent="BossDeath" instance=ExtResource( 8 )]
process_material = SubResource( 44 )

[node name="Damage" type="Node2D" parent="."]
script = ExtResource( 13 )
invulnerability_time = 0.1
max_flash_time = 0.35

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Damage"]
pause_mode = 2
stream = ExtResource( 25 )
max_distance = 600.0
bus = "SFX"

[node name="DamageOnTouch" type="Node2D" parent="."]
script = ExtResource( 1 )
damage = 6.0
